# matrix-rust-sdk

./: Cargo.toml
.github/workflows/: ci.yml
benchmarks/: Cargo.toml
benchmarks/benches/: fuzzy_match_room_list.rs
bindings/matrix-sdk-crypto-nodejs/: Cargo.toml
bindings/matrix-sdk-ffi/src/: room.rs
crates/matrix-sdk/: Cargo.toml
crates/matrix-sdk-base/: Cargo.toml
crates/matrix-sdk-base/src/: client.rs  sliding_sync.rs
crates/matrix-sdk-base/src/rooms/: mod.rs  normal.rs
crates/matrix-sdk-base/src/sliding_sync/: mod.rs
crates/matrix-sdk-base/src/store/: memory_store.rs
crates/matrix-sdk-crypto/: Cargo.toml
crates/matrix-sdk-crypto-js/src/: lib.rs  machine.rs  verifications.rs
crates/matrix-sdk-crypto-nodejs/src/: tracing.rs
crates/matrix-sdk-crypto-nodejs/tests/: machine.test.js
crates/matrix-sdk-crypto/src/js/: identifiers.rs
crates/matrix-sdk-ui/: Cargo.toml
crates/matrix-sdk-ui/src/room_list/: filters.rs  mod.rs
crates/matrix-sdk-ui/src/room_list_service/: room_list.rs
crates/matrix-sdk-ui/src/timeline/: sliding_sync_ext.rs
crates/matrix-sdk-ui/src/timeline/event_item/: mod.rs
crates/matrix-sdk/src/: http_client.rs
crates/matrix-sdk/src/client/: builder.rs  mod.rs
crates/matrix-sdk/src/event_cache/: linked_chunk.rs  mod.rs  store.rs
crates/matrix-sdk/src/room/: mod.rs
crates/matrix-sdk/src/sliding_sync/: README.md  builder.rs  cache.rs  mod.rs  room.rs
testing/matrix-sdk-integration-testing/src/: helpers.rs
testing/sliding-sync-integration-test/: Cargo.toml
testing/sliding-sync-integration-test/src/: lib.rs
(+2 files in other folders)
