[package]
name = "benchmarks"
description = "Matrix SDK benchmarks"
edition = "2021"
license = "Apache-2.0"
rust-version = { workspace = true }
version = "1.0.0"
publish = false

[dependencies]
assert_matches = { workspace = true }
criterion = { version = "0.5.1", features = ["async", "async_tokio", "html_reports"] }
futures-util = { workspace = true }
matrix-sdk-base = { path = "../crates/matrix-sdk-base" }
matrix-sdk-crypto = { path = "../crates/matrix-sdk-crypto", version = "0.6.0"}
matrix-sdk-sqlite = { path = "../crates/matrix-sdk-sqlite", version = "0.1.0", default-features = false, features = ["crypto-store"] }
matrix-sdk-test = { path = "../testing/matrix-sdk-test", version = "0.6.0"}
matrix-sdk-ui = { path = "../crates/matrix-sdk-ui", version = "0.6.0"}
matrix-sdk = { path = "../crates/matrix-sdk" }
ruma = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.3.0"
tokio = { version = "1.24.2", default-features = false, features = ["rt-multi-thread"] }
wiremock = "0.5"

[target.'cfg(target_os = "linux")'.dependencies]
pprof = { version = "0.12.0", features = ["flamegraph", "criterion"] }

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "store_bench"
harness = false

[[bench]]
name = "fuzzy_match_room_list"
harness = false